BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Conga_and_Echosign_Ids__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom setting to store Ids of conga and echosign records for easier data migrations</description>
    <fields>
        <fullName>AA_SERVICES_LONG_TERM_SPAIN_en_Spani__c</fullName>
        <label>AA-SERVICES-LONG-TERM-SPAIN-en_Spanish</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AA_SERVICES_LONG_TERM_SPAIN_en_Spanish__c</fullName>
        <label>AA-SERVICES-LONG-TERM-SPAIN-en_Spanish</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AA_SERVICES_SHORT_TERM_SPAIN_en_Spanish__c</fullName>
        <label>AA-SERVICES-SHORT-TERM-SPAIN-en_Spanish</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AA_TemplateSelectionCriteria__c</fullName>
        <label>AA-TemplateSelectionCriteria</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AUDSONLETTER__c</fullName>
        <label>AUDSONLETTER</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AUD_SPONLTR_ES_es__c</fullName>
        <label>AUD-SPONLTR-ES-es</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Act_Agreemt_Temp_for_Spon_Spanish__c</fullName>
        <label>Act Agreemt Temp for Spon Spanish</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActivityDetailsParticipants__c</fullName>
        <label>ActivityDetailsParticipants</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActivityDetails__c</fullName>
        <label>ActivityDetails</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActivityIdFromCP__c</fullName>
        <label>ActivityIdFromCP</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActivitySpeakerByActivity__c</fullName>
        <label>ActivitySpeakerByActivity</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Agreement_Template_for_Exhbits__c</fullName>
        <label>Activity Agreement Template for Exhbits,</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Agreement_Template_for_Services__c</fullName>
        <label>Activity Agreement Template for Services</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Agreement_Template_for_Sponsors__c</fullName>
        <label>Activity Agreement Template for Sponsors</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Agreement__c</fullName>
        <label>Activity Agreement</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Details_Audience__c</fullName>
        <label>Activity Details - Audience</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Details_Exp_Estimates__c</fullName>
        <label>Activity Details - Exp Estimates</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Details_Team_Members__c</fullName>
        <label>Activity Details Team Members</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Details_Template__c</fullName>
        <label>Activity Details Template</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Details__c</fullName>
        <label>Activity Details</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Invoice_Fixed_Fee__c</fullName>
        <label>Activity Invoice - Fixed Fee</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Invoice_Hourly_Fee__c</fullName>
        <label>Activity Invoice - Hourly Fee</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Invoice_Reimburseable_Expense__c</fullName>
        <label>Activity Invoice - Reimburseable Expense</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AudContractSigners__c</fullName>
        <label>AudContractSigners</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AudienceTemplate_Contracting_SingleSigne__c</fullName>
        <label>AudienceTemplate-Contracting-SingleSigne</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Audience_Template_for_Sponsorships__c</fullName>
        <label>Audience Template for Sponsorships</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BESTICFFROMCPId__c</fullName>
        <label>BESTICFFROMCPId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BESTICFFROMCP__c</fullName>
        <label>BESTICFFROMCP</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CONTRACTFROMAUD__c</fullName>
        <label>CONTRACTFROMAUD</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CONTRACTPARTYFROMANYWHERE__c</fullName>
        <label>CONTRACTPARTYFROMANYWHERE</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPFROMICF__c</fullName>
        <label>CPFROMICF</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractAndRelationsForEvents__c</fullName>
        <label>ContractAndRelationsForEvents</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractAndRelationsForServices__c</fullName>
        <label>ContractAndRelationsForServices</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractAndRelationsForSponsorship__c</fullName>
        <label>ContractAndRelationsForSponsorship</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractDescriptionsFor_Services__c</fullName>
        <label>ContractDescriptionsFor&apos;Services&apos;</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractRecipientsFor_Events__c</fullName>
        <label>ContractRecipientsFor&apos;Events&apos;</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Form_Template__c</fullName>
        <label>Contract Form Template</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Agmnt_OtherContractDescription__c</fullName>
        <description>&quot;Other&quot; Contract descriptions COnga query</description>
        <inlineHelpText>&quot;Other&quot; Contract descriptions COnga query</inlineHelpText>
        <label>Create Agmt OtherContractDescription</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Agmt_Reimbursables__c</fullName>
        <description>Reimbursables COnga query id</description>
        <inlineHelpText>Reimbursables COnga query id</inlineHelpText>
        <label>Create Agmt Reimbursables</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Agreement_AAEvents__c</fullName>
        <label>Create Agreement - [AAEvents]</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Agreement_AATemplateID__c</fullName>
        <label>Create Agreement - [AATemplateID]</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Agreement_AddtlTermBMSRight__c</fullName>
        <label>Create Agreement - [AddtlTermBMSRight]</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Agreement_AddtlTermFWGlobal__c</fullName>
        <label>Create Agreement - [AddtlTermFWGlobal]</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Agreement_AddtlTermPayLater__c</fullName>
        <label>Create Agreement - [AddtlTermPayLater]</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Agreement_CompanyPlantInfo__c</fullName>
        <label>Create Agreement - [CompanyPlantInfo]</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Agreement_ContractDescriptions__c</fullName>
        <label>Create Agreement - [ContractDescriptions</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Agreement_ContractLines__c</fullName>
        <label>Create Agreement - [ContractLines]</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Agreement_CstmCntrctID__c</fullName>
        <label>Create Agreement - [CstmCntrctID]</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Agreement_ESPBACKUP__c</fullName>
        <label>Create Agreement - [ESPBACKUP]</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Agreement_ESP__c</fullName>
        <label>Create Agreement - [ESP]</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Agreement_FrameworkAgmntInfo__c</fullName>
        <label>Create Agreement - [FrameworkAgmntInfo]</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Agreement_HourlySvcs__c</fullName>
        <label>Create Agreement - [HourlySvcs]</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Agreement_ICFInfo__c</fullName>
        <label>Create Agreement - [ICFInfo]</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Agreement_LOCDTSUBSEQ__c</fullName>
        <label>Create Agreement - [LOCDTSUBSEQ]</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Agreement_LocDtExtPrs__c</fullName>
        <label>Create Agreement - [LocDtExtPrs]</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Agreement_LocDtOnsite__c</fullName>
        <label>Create Agreement - [LocDtOnsite]</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Agreement_LocDtSiteDel__c</fullName>
        <label>Create Agreement - [LocDtSiteDel]</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Agreement_LocDtSpkTrn__c</fullName>
        <label>Create Agreement - [LocDtSpkTrn]</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Agreement_LocDtSubPrs__c</fullName>
        <label>Create Agreement - [LocDtSubPrs]</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Agreement_LocDtVirDel__c</fullName>
        <label>Create Agreement - [LocDtVirDel]</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Agreement_LocDtVirt__c</fullName>
        <label>Create Agreement - [LocDtVirt]</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Agreement_PerEventSvcs__c</fullName>
        <label>Create Agreement - [PerEventSvcs]</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Agreement_Recpnts__c</fullName>
        <label>Create Agreement - [Recpnts]</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Agreement_TemplateIDs__c</fullName>
        <label>Create Agreement - [TemplateIDs]</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EM_Activity_Invite__c</fullName>
        <label>EM Activity Invite</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESPContractSigners__c</fullName>
        <description>For Conga query called 	Get Contract Signers - [Signers]</description>
        <inlineHelpText>For Conga query called 	Get Contract Signers - [Signers]</inlineHelpText>
        <label>ESPContractSigners</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EVENTFROMAUD__c</fullName>
        <label>EVENTFROMAUD</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventSpeakerTemplate_Events__c</fullName>
        <label>EventSpeakerTemplate-Events</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventSpeakerTemplate_ServicesCon2Signer__c</fullName>
        <label>EventSpeakerTemplate-ServicesCon2Signer</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventSpeakerTemplate_ServicesContracting__c</fullName>
        <label>EventSpeakerTemplate-ServicesContracting</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventSpeakerTemplate_Sponsorship_Single__c</fullName>
        <label>EventSpeakerTemplate--Sponsorship-Single</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventSpeakerTemplate_Sponsorship_TwoSig__c</fullName>
        <label>EventSpeakerTemplate--Sponsorship-TwoSig</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Invoice_Speaker_Email__c</fullName>
        <label>Event Invoice - Speaker Email</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expense_Invoice_Act_Agreement__c</fullName>
        <label>Expense Invoice - [Act Agreement]</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expense_Invoice_Contract_Party__c</fullName>
        <label>Expense Invoice - [Contract Party]</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expense_Invoice_Event__c</fullName>
        <label>Expense Invoice - [Event]</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expense_Invoice_Exp_Lines__c</fullName>
        <label>Expense Invoice - [Exp Lines]</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expense_Invoice_Fees__c</fullName>
        <label>Expense Invoice - [Fees]</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expense_Invoice_Items__c</fullName>
        <label>Expense Invoice - [Items]</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expense_Invoice_Speaker__c</fullName>
        <label>Expense Invoice - [Speaker]</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FEEFROMCONTRACT__c</fullName>
        <label>FEEFROMCONTRACT</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FW_SERVICES_LONG_TERM_SPAIN_en_Spanish__c</fullName>
        <label>FW-SERVICES-LONG-TERM-SPAIN-en_Spanish</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fee_Invoice_Template__c</fullName>
        <label>Fee Invoice Template</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fee_ReimburseableFor_Events__c</fullName>
        <label>Fee/ReimburseableFor&apos;Events&apos;</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fee_ReimburseableFor_Services__c</fullName>
        <label>Fee/ReimburseableFor&apos;Services&apos;</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fee_ReimburseableFor_Sponsorship__c</fullName>
        <label>Fee/ReimburseableFor&apos;Sponsorship&apos;</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Framework_Agreement_Template_Spain__c</fullName>
        <label>Framework Agreement Template - Spain</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Framework_Agreement_Template_UK__c</fullName>
        <label>Framework Agreement Template - UK</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Framework_Agreement__c</fullName>
        <label>Framework Agreement</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generate_Activity_Agreement_ActivityA__c</fullName>
        <label>Generate Activity Agreement - [ActivityA</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generate_VMT2__c</fullName>
        <label>Generate VMT2</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generate_VMT_Account_Detail__c</fullName>
        <label>Generate VMT - [Account] Detail</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generate_VMT_Country__c</fullName>
        <label>Generate VMT - [Country]</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generic_Invitation_Template__c</fullName>
        <label>Generic Invitation Template</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GetInvoiceGroups__c</fullName>
        <label>GetInvoiceGroups</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ICF_DOCT_Vendor_Creation_EventCount__c</fullName>
        <label>ICF - DOCT Vendor Creation - [EventCount</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ICF_Form_Template__c</fullName>
        <label>ICF Form Template</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ICF_Template_Selection__c</fullName>
        <label>ICF Template Selection</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Information_Collection_Form_DOCT_Vendo__c</fullName>
        <label>Information Collection Form - DOCT Vendo</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initiate_Contract_ContractAccount__c</fullName>
        <label>Initiate Contract [ContractAccount]</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initiate_Contract_ContractICF__c</fullName>
        <label>Initiate Contract [ContractICF]</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initiate_ICF_Copy_EMSpeaker__c</fullName>
        <label>Initiate ICF Copy - [EMSpeaker]</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initiate_ICF_EMSpeaker__c</fullName>
        <label>Initiate ICF - [EMSpeaker]</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Materials_for_Event__c</fullName>
        <label>Materials for Event</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Attendees_Audience__c</fullName>
        <label>Meeting Attendees - [Audience]</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Attendees_Speakers__c</fullName>
        <label>Meeting Attendees - [Speakers]</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Attendees__c</fullName>
        <label>Meeting Attendees</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NEEDFROMEVENT__c</fullName>
        <label>NEEDFROMEVENT</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NON_Standard_Institutional_MSA__c</fullName>
        <label>NON-Standard Institutional MSA</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NON_Standard_Institutional_SOW__c</fullName>
        <label>NON-Standard Institutional SOW</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIIDATAFROMICF__c</fullName>
        <label>PIIDATAFROMICF</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIIDATA__c</fullName>
        <label>PIIDATA</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParticipantFromActivity__c</fullName>
        <label>ParticipantFromActivity</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Invoice_DE_Fixed_Fees__c</fullName>
        <label>Payment Invoice- DE-Fixed Fees</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Invoice_DE_Hourly_Fees_HCP__c</fullName>
        <label>Payment Invoice- DE-Hourly Fees HCP</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Invoice_DE_Reimbursable__c</fullName>
        <label>Payment Invoice- DE-Reimbursable</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QVar1_ICF_Record_Id_from_Speaker__c</fullName>
        <label>QVar1 - ICF Record Id from Speaker</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QVar_Contact_Id_from_Person_Account__c</fullName>
        <label>QVar - Contact Id from Person Account</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reimbursable_Expenses_Template__c</fullName>
        <label>Reimbursable Expenses Template</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Vendor_Master_Form_Germany__c</fullName>
        <label>SAP Vendor Master Form - Germany</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Vendor_Master_Form_Spain__c</fullName>
        <label>SAP Vendor Master Form - Spain</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Provider_Details_for_ICF__c</fullName>
        <label>Service Provider Details for ICF</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sign_In_Sheet__c</fullName>
        <label>Sign In Sheet</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spain_Spanish_HCO_Services__c</fullName>
        <label>Spain_Spanish_HCO_Services</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spain_Spanish_HCP_NonHCp_Services__c</fullName>
        <label>Spain_Spanish_HCP_NonHCp_Services</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spain_Spanish_Sponsorship__c</fullName>
        <label>Spain_Spanish_Sponsorship</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Speaker_Specific_Template__c</fullName>
        <label>Speaker Specific Template</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SponsorshipLetterTemplateIds__c</fullName>
        <label>SponsorshipLetterTemplateIds</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UK_English_Sponsorship__c</fullName>
        <label>UK_English_Sponsorship</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VFMEmail__c</fullName>
        <label>VFMEmail</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VFM_Email_Template_Selection__c</fullName>
        <label>VFM Email Template Selection</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VMFOnCP__c</fullName>
        <label>VMFOnCP</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VMFOnConParty__c</fullName>
        <label>VMFOnConParty</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VMFTemplate__c</fullName>
        <label>VMFTemplate</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VMF_Email_To__c</fullName>
        <label>VMF Email To</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VMF_Email_to_Address__c</fullName>
        <description>Email Address that the VMF Email is sent to</description>
        <inlineHelpText>Email Address that the VMF Email is sent to</inlineHelpText>
        <label>VMF Email to Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VMF_ICF__c</fullName>
        <label>VMF-ICF</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VMF__c</fullName>
        <label>VMF</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VMT_Form_Template__c</fullName>
        <label>VMT Form Template</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Conga and Echosign Ids</label>
</CustomObject>